# misc

./: readme.md
hw_site/: form_styles.css  hw2.html  hw3.html  hw4.html  hw5.html  hw6.html  hw7.html  hw8.html  index.html  styles.css
hw_site/hw2/: part1.html  part1.js  part2.html  part2.js
hw_site/hw3/: part1.html  part1.js  part2.html  part2.js
hw_site/hw4/: ec.html  ec.js  part1.html  part1.js  part2.html  part2.js  table_styles.css
hw_site/hw5/: part1.html  part1.js  part2.html  part2.js  part3.html  part3.js
hw_site/hw6/: part1.html  part1.js  part2.html  part2.js  part3.html  part3.js
hw_site/hw7/: part1.html  part1.js  part2.html  part2.js
hw_site/hw8/: cd_catalog.xml
learning_opengl/: .gitmodules  CMakeLists.txt  main.cpp
learning_opengl/shaders/: shader_sources.cpp  shader_sources.h
